--- a/src/index.css
+++ b/src/index.css
@@ -26,9 +26,9 @@ a {
 	color: #232323;
 	text-decoration: inherit;
 }
-a:hover {
+/* a:hover {
 	color: #535bf2;
-}
+} */
 
 body {
 	margin: 0;
@@ -65,9 +65,7 @@ button:focus-visible {
 		color: #00275c;
 		background-color: #ffffff;
 	}
-	a:hover {
-		color: #747bff;
-	}
+
 	button {
 		background-color: #f9f9f9;
 	}
